# cxo-agent

./: .env.example  .gitignore  AVATAR_DELIVERY_MC165_PHASE1.md  CLAUDE.md  README.md  REDESIGN.md  app.py  cxo_agent.py  package-lock.json  package.json  playwright.smoke.config.ts  pyproject.toml  render.yaml  requirements.txt  test_embedding.ts  tsconfig.json
.devcontainer/: devcontainer.json
artifacts/: MC-165_DESIGN_BRIEF.md
data/: slide-templates.json
deploy/: README.md  apollo-rescue.mjs  apollo-rescue.service  apollo-terminal.service  apollo-tunnel.sh  apollo.service
docs/: MC-178_IMPLEMENTATION.md  MC-187-DESIGN-PROPOSAL.md  MC-245-auto-scheduler-design.md  MC-250-planner-p4-design.md  NOTEBOOK_RAG_DESIGN.md  RAG_REDESIGN_2026-06-09.md  TASK_AUTHORING_TEMPLATE.md  TASK_TRACKER.md  TEMPLATE_LIBRARY_DESIGN_2026-06-09.md  financial-analysis-platform-plan.md
e2e/: render-smoke-20260530-newfeatures.spec.ts  render-smoke-20260530-paste-vault.spec.ts  render-smoke-20260530.spec.ts  render-smoke-20260601-terminal-start.spec.ts  render-smoke-20260601-terminal-upload.spec.ts  render-smoke-20260601-tile-detail.spec.ts
knowledge/: cfo.json  cmo.json  cpo.json  cso.json  cto.json
prompts/: character_meerkat_phd.md  screening_rubric.md  script_template.md  style_guide.md
scripts/: chat-autonomous.sh  link-task.sh  mc-165-persona-generation.md  pilot.sh  sync_logic_spec.py  terminal-session-manager.sh
server/: package-lock.json  package.json  tsconfig.json
static/: index.html
web/: index.html  package-lock.json  package.json  tailwind.config.js  (+5 more)
(+362 files in other folders)
